<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:elevation="6dp"
    android:clipToPadding="false"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main"
    tools:context="com.example.kalim.hijriagecalculator.MainActivity">

    <DatePicker
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/datePicker"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:startYear="1910"
        android:layout_alignParentStart="true"
        android:datePickerMode="spinner"
        android:calendarViewShown="false"/>



    <Button
        android:layout_width="110dp"
        android:layout_height="50dp"
        android:text="@string/calculate"
        android:id="@+id/button"
        style="@style/Widget.AppCompat.Button.Colored"
        android:onClick="calculateIslamicDate"
        android:layout_below="@+id/datePicker"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp">
    </Button>


    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="@string/banner_ad_unit_id">
    </com.google.android.gms.ads.AdView>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button"
        android:id="@+id/linearLayout2">
        <TextView
            android:fontFamily="Roboto-Light italic"
            android:textStyle="italic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/your_islamic_age"
            android:id="@+id/textView2" />

        <TextView
            android:layout_width="wrap_content"
            android:fontFamily="Roboto-Light italic"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"

            android:id="@+id/islamic_age_text"
            android:textStyle="italic"
            android:layout_weight="1"/>


    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout2"

        android:id="@+id/linearLayout">
        <TextView
            android:fontFamily="Roboto-Light italic"
            android:textStyle="italic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/your_current_age"
            android:id="@+id/current_age_textView"
            android:layout_below="@+id/button"
          android:layout_weight="1" />

        <TextView
            android:fontFamily="Roboto-Light italic"
            android:textStyle="italic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"

            android:layout_weight="1"
            android:id="@+id/d_current_age_text"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout">
        <TextView
        android:fontFamily="Roboto-Light italic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/your_birthday"
        android:id="@+id/textView"
        android:textStyle="italic"
            android:layout_weight="1" />
        <TextView
            android:layout_width="wrap_content"
            android:fontFamily="Roboto-Light italic"
            android:layout_height="wrap_content"

            android:id="@+id/islamic_date_text"
            android:textStyle="italic"
            android:layout_weight="1"
             />


    </LinearLayout>


</RelativeLayout>
